objects/DFA_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Owner_Email__c</fullName>
        <formula>Alert_Owner__r.Email</formula>
        <label>Alert Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Owner_Name__c</fullName>
        <formula>Alert_Owner__r.FirstName + &quot; &quot; +  Alert_Owner__r.LastName</formula>
        <label>Alert Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DFA_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_DFA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Associated DFA</label>
        <referenceTo>Finite_State_Machine_Configuration__c</referenceTo>
        <relationshipLabel>DFA Rules</relationshipLabel>
        <relationshipName>DFA_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Regex_Expression__c</fullName>
        <label>Regex Expression</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DFA Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DFA Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFA Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>